src/objects/TASKRAY__Project__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trExternalSentiment__c</fullName>
        <description>The external sentiment of a customer onboarding project based on a satisfaction score.</description>
        <inlineHelpText>Use this field to capture the external sentiment of a customer onboarding project.</inlineHelpText>
        <label>External Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Very Unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Very Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trGenerateOnboardingFeedbackForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generates a link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</description>
        <inlineHelpText>Use this to generate the Onboarding Feedback Form Link which can be shared with a customer to capture their external feedback and sentiment.</inlineHelpText>
        <label>Generate Onboarding Feedback Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedCompletionDate__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the date of when the project is initially projected to be completed. This date will update accordingly to accommodate any scheduling changes up until the project start date.</description>
        <inlineHelpText>“Behind the scenes” field. This is the date of when the project was initially projected to be completed.</inlineHelpText>
        <label>Initial Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInitialProjectedDuration__c</fullName>
        <description>This is a “behind the scenes” field that is used to track the number of days between the project Start Date and the project Initial Projected Completion Date.</description>
        <formula>IF(
    (TASKRAY__trInitialProjectedCompletionDate__c - TASKRAY__Project_Start__c + 1) &gt; 0,
    TASKRAY__trInitialProjectedCompletionDate__c - TASKRAY__Project_Start__c + 1,
    null
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>“Behind the scenes” field. This is the duration of the project as it was initially projected.</inlineHelpText>
        <label>Initial Projected Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trInternalSentiment__c</fullName>
        <description>The internal sentiment of a customer onboarding project based on a satisfaction score.</description>
        <inlineHelpText>Use this field to capture the internal sentiment of a customer onboarding project.</inlineHelpText>
        <label>Internal Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Very Unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Very Satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trNickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHoldDate__c</fullName>
        <description>The most recent date that a project has been marked as on hold.</description>
        <inlineHelpText>The most recent date that a project has been marked as on hold.</inlineHelpText>
        <label>On-Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a project has been marked as on hold.</description>
        <inlineHelpText>Indicates that a project has been marked as on hold.</inlineHelpText>
        <label>On-Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingFeedbackFormLink__c</fullName>
        <description>A link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</description>
        <formula>IF(TASKRAY__trGenerateOnboardingFeedbackForm__c, 

HYPERLINK($Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trFormsPublicSiteURL__c+&apos;?flowname=&apos;+$Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trOnboardingFeedbackFlow__c+&apos;&amp;projectId=&apos;+ Id, 

&quot;Link to Form&quot;) 

,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the TaskRay Onboarding Feedback Form which can be shared with a customer to capture their external feedback and sentiment.</inlineHelpText>
        <label>Onboarding Feedback Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingSummaryNotes__c</fullName>
        <description>Key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</description>
        <inlineHelpText>Use this field to store key information about a customer&apos;s onboarding that can be referenced throughout the customer&apos;s lifecycle.</inlineHelpText>
        <label>Onboarding Summary Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>trProjectOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPendingInterviewCount__c</fullName>
        <label>Pending Interview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPrimaryOnboardingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the primary customer contact for onboarding.</description>
        <inlineHelpText>Use this field to identify the primary customer contact for onboarding.</inlineHelpText>
        <label>Primary Onboarding Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Onboarding Contact (TaskRay Projects)</relationshipLabel>
        <relationshipName>trPrimaryOnboardingProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStatus__c</fullName>
        <description>Used to set the status of a project.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4bca81</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>ffb75d</fullName>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>d4504c</fullName>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateDescription__c</fullName>
        <description>A description of a Template Project.</description>
        <inlineHelpText>Use this field to provide a description of a Template Project.</inlineHelpText>
        <label>Template Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateLibrarySource__c</fullName>
        <label>TaskRay Template Library Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Cloned Projects</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tag_Usage_Type__c</fullName>
        <description>Indicates the usage of the tags/UIDs being requested by the client or partner</description>
        <inlineHelpText>Indicates the usage of the tags/UIDs being requested by the client or partner</inlineHelpText>
        <label>Tag Usage Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                    <isActive>false</isActive>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskRayLaunchDate__c</fullName>
        <description>Due date of the Task Ray task</description>
        <label>Launch Date / Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskRayMemberRecruitmentStartDate__c</fullName>
        <description>Field to track the target start of the Member recruitment</description>
        <inlineHelpText>Field to track the target start of the Member recruitment</inlineHelpText>
        <label>Member Recruitment Start Date - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskRayStatus__c</fullName>
        <description>The status of the TaskRay Project</description>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress - On Track</fullName>
                </value>
                <value>
                    <fullName>In Progress - Delayed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                    <isActive>false</isActive>
                    <label>Contracting</label>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                    <isActive>false</isActive>
                    <label>Implementation</label>
                </value>
                <value>
                    <fullName>Launched + 90</fullName>
                    <isActive>false</isActive>
                    <label>Launched + 90</label>
                </value>
                <value>
                    <fullName>Ongoing Delivery</fullName>
                    <isActive>false</isActive>
                    <label>Ongoing Delivery</label>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                    <isActive>false</isActive>
                    <label>Terminated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskRayTargetedMarketingStartDate__c</fullName>
        <description>Field to track the target start of the targeted enrollment marketing</description>
        <inlineHelpText>Field to track the target start of the Member enrollment recruitment</inlineHelpText>
        <label>Targeted Marketing Start Date - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskRayWeeksLive__c</fullName>
        <formula>Floor(( TODAY() -   TaskRayLaunchDate__c )/7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskRay_Project_Number__c</fullName>
        <displayFormat>P-{0000}</displayFormat>
        <label>TaskRay Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Termed_BH__c</fullName>
        <label>Termed - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termed_DM__c</fullName>
        <label>Termed- DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termed_HTN__c</fullName>
        <label>Termed - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termed_PD__c</fullName>
        <label>Termed - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termed_WM__c</fullName>
        <label>Termed - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_File_Due_Date__c</fullName>
        <description>Date by which the test report of other test file must be delivered</description>
        <inlineHelpText>Date by which the test report of other test file must be delivered</inlineHelpText>
        <label>Test File Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_File_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a test report or other test file needs to be sent</description>
        <inlineHelpText>Indicates if a test report or other test file needs to be sent</inlineHelpText>
        <label>Test File Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upcoming_Biometric_Screenings__c</fullName>
        <inlineHelpText>Does the client have upcoming or regular Biometric Screenings that they want Livongo to participate in?</inlineHelpText>
        <label>Upcoming Biometric Screenings?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upcoming_Health_Fairs__c</fullName>
        <inlineHelpText>Does the client have upcoming or regular Health Fairs that they want Livongo to participate in?</inlineHelpText>
        <label>Upcoming Health Fairs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upcoming_Vendor_Summits__c</fullName>
        <inlineHelpText>Does the client have upcoming or regular Vendor Summits that they want Livongo to participate in?</inlineHelpText>
        <label>Upcoming Vendor Summits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_legal_documents_are_in_place__c</fullName>
        <description>Meant to be included in the Client Handoff Summary view</description>
        <inlineHelpText>E.g. BAA, DSA, amendments, partnership specific documents, etc. Provide link to DSA if not saved in client&apos;s Box folder. Additionally, are there special contract stipulations that need to be highlighted/kept top of mind?</inlineHelpText>
        <label>What legal documents are in place?</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sFTP_in_Place__c</fullName>
        <description>Indicates if the required sFTP is in place in order to share data between the client and/or partner(s)</description>
        <inlineHelpText>Indicates if the required sFTP is in place in order to share data between the client and/or partner(s)</inlineHelpText>
        <label>sFTP in Place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TaskRay Project</label>
    <listViews>
        <fullName>Ad_Hoc_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Type__c</field>
            <operation>equals</operation>
            <value>Ad Hoc Request</value>
        </filters>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Unassigned</value>
        </filters>
        <label>Ad Hoc Projects - Missing Owners</label>
        <sharedTo>
            <role>Client_Strategy</role>
            <role>Client_Strategy_Leadership</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Billing_Unassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Unassigned</label>
        <queue>Billing_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Strategy_Unassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>Client Strategy Unassigned</label>
        <queue>Client_Strategy_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Exchange_Projects</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7) AND 8</booleanFilter>
        <columns>TaskRay_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskRayLaunchDate__c</columns>
        <columns>TASKRAY__trAccount__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TaskRayStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Ari Kotlyarevsky</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Ben Ewing</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Parag Chandiwal</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Paul Kim</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Sheela Venkobarao</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Juliana Orlov</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Data Science Unassigned</value>
        </filters>
        <filters>
            <field>TaskRayStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Data Exchange Open Projects</label>
    </listViews>
    <listViews>
        <fullName>Data_Operations_Unassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Operations Unassigned</label>
        <queue>Data_Operations_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Science_Unassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Science Unassigned</label>
        <queue>Data_Science_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Client_Setup_Unassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IT Client Setup Unassigned</label>
        <queue>IT_Client_Setup_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Clinical_Portal_Unassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>IT Clinical Portal Unassigned</label>
        <queue>IT_Clinical_Portal_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>Project_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
    </listViews>
    <listViews>
        <fullName>Project_Templates</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Project_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Project Templates</label>
        <sharedTo>
            <role>Client_Strategy_Leadership</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SMOKE_TEST_Templates</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>TASKRAY__trTemplate__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>[Ad Hoc]</value>
        </filters>
        <label>[SMOKE TEST] Templates</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__AllProjects</fullName>
        <columns>TaskRay_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Project_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TASKRAY__trCompletionPercentage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__Archived_and_Templates</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>Project_Duration__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>TASKRAY__trTemplate__c</columns>
        <columns>Project_Template_Category__c</columns>
        <columns>Project_Type__c</columns>
        <columns>TaskRayStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Archived and Templates</label>
    </listViews>
    <listViews>
        <fullName>trUnassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>TaskRay Unassigned</label>
        <queue>trUnassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Added to TaskRay Project Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>Cannot_Edit_Template</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 TASKRAY__trTemplate__c = TRUE,
 !$Permission.TaskRay_Admin_Permission_Set
)</errorConditionFormula>
        <errorMessage>You do not have permission to edit a TaskRay Template</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_Description_is_required</fullName>
        <active>false</active>
        <description>JENGA-1149</description>
        <errorConditionFormula>AND(ISCHANGED(Report_Request_Type__c),
ISPICKVAL(Report_Request_Type__c, &apos;Custom&apos;),
ISBLANK(Report_Description__c))</errorConditionFormula>
        <errorMessage>Report Description is required when Report Request Type is Custom</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Report_Type_Detail_is_required</fullName>
        <active>false</active>
        <description>JENGA-1149</description>
        <errorConditionFormula>AND(ISPICKVAL(Report_Request_Type__c, &apos;Standard&apos;),
ISPICKVAL(Report_Type_Detail__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>Report Type Detail is required when Report Request Type is Standard</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Acct_and_CO_on_project</fullName>
        <active>true</active>
        <description>Require the Account to be completed on all projects, and the Client Overview field for certain project types.</description>
        <errorConditionFormula>AND(
TASKRAY__trTemplate__c &lt;&gt; TRUE,
!ISPICKVAL( TaskRayStatus__c, &quot;Not Started&quot; ),
OR(
ISBLANK( TASKRAY__trAccount__c ),
AND(
ISBLANK( Client_Overview__c ),
OR(
AND(ISPICKVAL(Project_Type__c , &quot;New Client / Contract Path&quot;),
!ISPICKVAL(Project_Sub_Type__c, &quot;Select Partner Account - Sub Project&quot;)),
ISPICKVAL( Project_Type__c , &quot;Cross-Sell (New Program)&quot;),
ISPICKVAL( Project_Type__c , &quot;Population Expansion&quot;)))
)
)</errorConditionFormula>
        <errorMessage>The Account field is required for all project types, and the Client Overview is required for New Client, Cross Sell, or Population Expansion project types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Completing_Project_Restricted_to_Owner</fullName>
        <active>false</active>
        <errorConditionFormula>AND($User.Id !=  OwnerId ,ISCHANGED(TASKRAY__trCompleted__c),TASKRAY__trCompleted__c)</errorConditionFormula>
        <errorMessage>Only the Project Owner can mark the project as completed. Contact your system administrator if you would like access to this functionality.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Editing_Score_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from modifying the Customer Onboarding Score.</description>
        <errorConditionFormula>AND( 
ISCHANGED( TASKRAY__trCustomerOnboardingScore__c ), 
NOT(ISBLANK(PRIORVALUE(TASKRAY__trCustomerOnboardingScore__c))), 
$User.Id != OwnerId 
)</errorConditionFormula>
        <errorMessage>Only the Project Owner can edit the Customer Onboarding Score. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__External_Sharing_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from making a project available for external users</description>
        <errorConditionFormula>ISCHANGED( TASKRAY__trAvailableExternal__c ) &amp;&amp;
TASKRAY__trAvailableExternal__c == true &amp;&amp;
$User.Id !=  OwnerId</errorConditionFormula>
        <errorMessage>Only the Project Owner can make the project available for external sharing. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__Feedback_Form_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from making a project available for external onboarding feedback.</description>
        <errorConditionFormula>AND(ISCHANGED( TASKRAY__trGenerateOnboardingFeedbackForm__c ) ,TASKRAY__trGenerateOnboardingFeedbackForm__c == true , $User.Id != OwnerId)</errorConditionFormula>
        <errorMessage>Only the Project Owner can make the project available for external onboarding feedback. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__No_spaces_in_Nickname</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( TASKRAY__trNickname__c  ,&quot;.*\\s+.*&quot;)</errorConditionFormula>
        <errorMessage>Project Nicknames cannot have spaces</errorMessage>
    </validationRules>
</CustomObject>